--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p class="section__text__p2"><span id="element"></span></p>
 
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">
                     Download CV
                 </button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -123,13 +123,6 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
-                                <h3>SASS</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
                                 <h3>JavaScript</h3>
                                 <p>Intermediate</p>
                             </div>
@@ -138,13 +131,6 @@
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                             <div>
                                 <h3>React.JS</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>Material UI</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
@@ -174,13 +160,6 @@
                                 <p>Intermediate</p>
                             </div>
                         </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-                            <div>
-                                <h3>Git</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
                     </div>
                 </div>
             </div>
@@ -198,7 +177,7 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project One</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/rohitbhupat/portfolio-website'">
                             Github
                         </button>
                     </div>
@@ -209,7 +188,7 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/rohitbhupat/blog-react-app'">
                             Github
                         </button>
                     </div>
@@ -220,7 +199,7 @@
                     </div>
                     <h2 class="experience-sub-title project-title">Project Three</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/rohitbhupat/ShoppyMax'">
                             Github
                         </button>
                     </div>
@@ -257,7 +236,7 @@
         <p>Copyright &#169; 2023 Rohit Bhupat. All Rights Reserved.</p>
     </footer>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
